# copium-loop

./: .gitignore  GEMINI.md  PR_DESCRIPTION.md  README.md  arch-refactor.md  patch.py  patch2.py  plan.md  pyproject.toml  refactor_plan.md  reproduce_issue.py  test_pill_rendering.py
.Jules/: palette.md
.github/workflows/: ci.yml
.jules/: bolt.md  palette.md  sentinel.md
.lib/linkify_it/: __init__.py  main.py  ucre.py
.lib/markdown_it_py-4.0.0.dist-info/: RECORD
.lib/pygments-2.19.2.dist-info/: RECORD
.lib/textual-7.5.0.dist-info/: RECORD
src/copium_loop/: __init__.py  __main__.py  alldone.py  codexbar.py  constants.py  copium_loop.py  discovery.py  errors.py  gemini.py  gemini_stats.py  git.py  graph.py  input_reader.py  memory.py  nodes.py  notifications.py  patches.py  session_manager.py  shell.py  state.py  telemetry.py  tmux.py  ui.py  utils.py  workflow.py  workon.py
test/: __init__.py  conftest.py  test_alldone.py  test_cli_alldone.py  test_cli_validation.py  test_codexbar.py  test_constants.py  test_discovery.py  test_engine_override.py  test_gemini.py  test_gemini_stats.py  test_git.py  test_git_caching.py  test_git_push_safety.py  test_git_repo_name.py  test_graph.py  test_input.py  test_integration.py  test_is_infrastructure_error_refactor.py  test_issue100_dollarmath.py  test_issue100_regex.py  test_issue14_node_timeout.py  test_issue152_telemetry_architect.py  test_issue159_state_refactor.py  test_issue15_fixes.py  test_issue169_session_manager_hash_only.py  test_issue185_logging_cleanup.py  test_issue187_continue_logic.py  test_issue187_continue_prompt.py  test_issue187_fresh_start.py  test_issue187_session_derivation.py  test_issue187_session_v3.py  test_issue194_telemetry_isolation.py  test_issue236_continue_completed.py  test_issue242_architect_refactor.py  test_issue255_retry_reset.py  test_issue255_retry_reset_refactor.py  test_issue290_fixes.py  test_issue292.py  test_issue295_fixes.py  (+46 more)
test/engine/: test_base.py  test_factory.py  test_gemini.py  test_gemini_issue249.py  test_issue149_telemetry_truncation.py  test_issue152_jules_verdict_overwrite.py  test_issue168_jules_truncation_fix.py  test_issue169_jules_prompt_hashing.py  test_issue184_jules_url.py  test_jules.py  test_jules_activity_detail.py  test_jules_agent_message.py  test_jules_api.py  test_jules_args.py  test_jules_cleanup.py  test_jules_refactor.py  test_jules_retries.py  test_jules_summary.py  test_jules_timeout.py
web/: package-lock.json  package.json  vite.config.ts
(+133 files in other folders)
