[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copium-loop"
version = "0.1.0"
description = "AI-powered development workflow automation using LangGraph and Gemini"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Billy C"}
]
dependencies = [
    "langchain-core>=0.1.0",
    "langgraph>=0.1.0",
]

[project.scripts]
copium-loop = "copium_loop.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
