[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copium-loop"
version = "0.1.0"
description = "AI-powered development workflow automation using LangGraph and Gemini"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Billy C"}
]
dependencies = [
    "langchain-core>=0.1.0",
    "langgraph>=0.1.0",
    "textual>=0.76.0",
    "rich>=13.0.0",
]

[project.scripts]
copium-loop = "copium_loop.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff",
    "pytest-cov",
    "textual-dev>=1.5.0",
]

[tool.ruff]
# Target Python version
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (E) and pycodestyle (W) codes by default.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
